src/objects/PlanProp__c.object
<CustomObject>
    <fields>
        <fullName>CancelRule__c</fullName>
        <label>予約キャンセル規定</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CheckInBegTime__c</fullName>
        <inlineHelpText>チェックイン可能の開始時間を定義する</inlineHelpText>
        <label>チェックイン開始時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>23:30</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CheckInEndTime__c</fullName>
        <inlineHelpText>チェックイン可能の終了時間を定義する</inlineHelpText>
        <label>チェックイン終了時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>23:30</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CheckOutTime__c</fullName>
        <label>チェックアウト時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnCancelRule__c</fullName>
        <label>予約キャンセル規定（英）</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnMeal__c</fullName>
        <label>お食事（英）</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>朝食あり</fullName>
                </value>
                <value>
                    <fullName>昼食あり</fullName>
                </value>
                <value>
                    <fullName>夕食あり</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnNote__c</fullName>
        <label>備考（英）</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnPlanCategory__c</fullName>
        <label>プランカテゴリー（英）</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>宿泊</fullName>
                </value>
                <value>
                    <fullName>日帰り</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnPlanType__c</fullName>
        <label>プラン種別（英）</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>PlanCategory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>女性限定プラン</fullName>
                </value>
                <value>
                    <fullName>カップルプラン</fullName>
                </value>
                <value>
                    <fullName>レディースプラン</fullName>
                </value>
                <value>
                    <fullName>赤ちゃんづれプラン</fullName>
                </value>
                <value>
                    <fullName>シルバープラン</fullName>
                </value>
                <value>
                    <fullName>ファミリープラン</fullName>
                </value>
                <value>
                    <fullName>一人旅プラン</fullName>
                </value>
                <value>
                    <fullName>エステ付きプラン</fullName>
                </value>
                <value>
                    <fullName>アーリーチェックインプラン</fullName>
                </value>
                <value>
                    <fullName>レイトチェックインプラン</fullName>
                </value>
                <value>
                    <fullName>最大24時間滞在プラン</fullName>
                </value>
                <value>
                    <fullName>駐車場付きプラン</fullName>
                </value>
                <value>
                    <fullName>送迎付きプラン</fullName>
                </value>
                <value>
                    <fullName>ブライダル視察付きプラン</fullName>
                </value>
                <value>
                    <fullName>5泊連泊で1泊分無料プラン</fullName>
                </value>
                <value>
                    <fullName>連泊プラン</fullName>
                </value>
                <value>
                    <fullName>ミラドーコラボプラン</fullName>
                </value>
                <value>
                    <fullName>日帰りレストランプラン</fullName>
                </value>
                <value>
                    <fullName>日帰り個室プラン</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadCanBegDate__c</fullName>
        <inlineHelpText>該当プランがいつから予約可能の日付を定義する</inlineHelpText>
        <label>予約可能開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadCanEndDate__c</fullName>
        <inlineHelpText>該当プランがいついつまで予約可能の日付を定義する</inlineHelpText>
        <label>予約可能終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadCancelDays__c</fullName>
        <inlineHelpText>予約されたプランの予約キャンセル期限日数</inlineHelpText>
        <label>何日前まで予約キャンセル受付</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadCancelTime__c</fullName>
        <label>何日前の時刻まで予約キャンセル受付</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:10</fullName>
                </value>
                <value>
                    <fullName>11:20</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>11:40</fullName>
                </value>
                <value>
                    <fullName>11:50</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:10</fullName>
                </value>
                <value>
                    <fullName>12:20</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>12:40</fullName>
                </value>
                <value>
                    <fullName>12:50</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:10</fullName>
                </value>
                <value>
                    <fullName>14:20</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>14:40</fullName>
                </value>
                <value>
                    <fullName>14:50</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:10</fullName>
                </value>
                <value>
                    <fullName>15:20</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>15:40</fullName>
                </value>
                <value>
                    <fullName>15:50</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:10</fullName>
                </value>
                <value>
                    <fullName>16:20</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadPreBegDays__c</fullName>
        <inlineHelpText>利用日の何日前から予約可能かを定義する</inlineHelpText>
        <label>何日前から予約受付</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadPreBegTime__c</fullName>
        <inlineHelpText>利用日の何日前の何時から予約可能かを定義する</inlineHelpText>
        <label>何日前の時刻から予約受付</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>23:30</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadPreEndDays__c</fullName>
        <inlineHelpText>利用日に対していつまで予約可能かを定義する
1日前の19時まで、とか当日の12時まで、というような指定となる</inlineHelpText>
        <label>何日前まで予約受付</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadPreEndTime__c</fullName>
        <label>何日前の時刻まで予約受付</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>23:30</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadUpdDays__c</fullName>
        <inlineHelpText>予約されたプランの予約変更期限日数</inlineHelpText>
        <label>何日前まで予約変更受付</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadUpdTime__c</fullName>
        <label>何日前の時刻まで予約変更受付</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:10</fullName>
                </value>
                <value>
                    <fullName>11:20</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>11:40</fullName>
                </value>
                <value>
                    <fullName>11:50</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:10</fullName>
                </value>
                <value>
                    <fullName>12:20</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>12:40</fullName>
                </value>
                <value>
                    <fullName>12:50</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:10</fullName>
                </value>
                <value>
                    <fullName>14:20</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>14:40</fullName>
                </value>
                <value>
                    <fullName>14:50</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:10</fullName>
                </value>
                <value>
                    <fullName>15:20</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>15:40</fullName>
                </value>
                <value>
                    <fullName>15:50</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:10</fullName>
                </value>
                <value>
                    <fullName>16:20</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxChildren__c</fullName>
        <label>最大子ども人数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxNight__c</fullName>
        <label>最大泊数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxRooms__c</fullName>
        <label>最大部屋数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meal__c</fullName>
        <label>お食事</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>朝食あり</fullName>
                </value>
                <value>
                    <fullName>昼食あり</fullName>
                </value>
                <value>
                    <fullName>夕食あり</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MinChildren__c</fullName>
        <label>最小子ども人数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinNight__c</fullName>
        <label>最小泊数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinRooms__c</fullName>
        <label>最小部屋数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanCategory__c</fullName>
        <label>プランカテゴリー</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>宿泊</fullName>
                </value>
                <value>
                    <fullName>日帰り</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <label>プラン種別</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>PlanCategory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>カップルプラン</fullName>
                </value>
                <value>
                    <fullName>女性限定プラン</fullName>
                </value>
                <value>
                    <fullName>レディースプラン</fullName>
                </value>
                <value>
                    <fullName>赤ちゃんづれプラン</fullName>
                </value>
                <value>
                    <fullName>シルバープラン</fullName>
                </value>
                <value>
                    <fullName>ファミリープラン</fullName>
                </value>
                <value>
                    <fullName>一人旅プラン</fullName>
                </value>
                <value>
                    <fullName>エステ付きプラン</fullName>
                </value>
                <value>
                    <fullName>アーリーチェックインプラン</fullName>
                </value>
                <value>
                    <fullName>レイトチェックインプラン</fullName>
                </value>
                <value>
                    <fullName>最大24時間滞在プラン</fullName>
                </value>
                <value>
                    <fullName>駐車場付きプラン</fullName>
                </value>
                <value>
                    <fullName>送迎付きプラン</fullName>
                </value>
                <value>
                    <fullName>ブライダル視察付きプラン</fullName>
                </value>
                <value>
                    <fullName>5泊連泊で1泊分無料プラン</fullName>
                </value>
                <value>
                    <fullName>連泊プラン</fullName>
                </value>
                <value>
                    <fullName>ミラドーコラボプラン</fullName>
                </value>
                <value>
                    <fullName>日帰りレストランプラン</fullName>
                </value>
                <value>
                    <fullName>日帰り個室プラン</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>プラン属性情報</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>プラン属性名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>